add: test cases and swapper doc for signup, login
